cabal-version:       >=1.10
name:                conway
version:             0.1.0.0
build-type:          Simple

executable conway
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:       base >=4.7 && <5,
                       JuicyPixels,
                       directory
  default-language:    Haskell2010